force-app/main/default/objects/IS_Case_Process_Setting__mdt/IS_Case_Process_Setting__mdt.object-meta.xml
<CustomObject>
    <description>RN - CloudSmiths - holds the settings for the Investors services case support processes - This meta data type is reference in Apex code</description>
    <label>IS Case Process Setting</label>
    <pluralLabel>IS Case Process Settings</pluralLabel>
</CustomObject>