force-app/main/default/objects/IS_Case_Process_Setting__mdt/fields/CaseRecordType__c.field-meta.xml
<CustomField>
    <fullName>CaseRecordType__c</fullName>
    <description>RN - CloudSmiths - The Name of the relevant case record type</description>
    <inlineHelpText>Supply the Case Record Type Name for the relevant process</inlineHelpText>
    <label>Case Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>