force-app/main/default/objects/IS_Case_Process_Setting__mdt/fields/CustodyCategory__c.field-meta.xml
<CustomField>
    <fullName>CustodyCategory__c</fullName>
    <label>Custody Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Amendments</fullName>
                <default>true</default>
                <label>Account Amendments</label>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Africa Desk</fullName>
            </value>
            <value>
                <fullName>CCOMS / BOL</fullName>
            </value>
            <value>
                <fullName>Corporate Actions</fullName>
            </value>
            <value>
                <fullName>Global Custody</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Swift Messages</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Tax Related Queries</fullName>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>SI Debit</fullName>
            </value>
            <value>
                <fullName>Cash Payment</fullName>
            </value>
            <value>
                <fullName>Cash - CATS Entries</fullName>
            </value>
            <value>
                <fullName>IS Information</fullName>
            </value>
            <value>
                <fullName>Legislation and Legal</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>