force-app/main/default/objects/IS_Case_Process_Setting__mdt/fields/CustodySubCategory__c.field-meta.xml
<CustomField>
    <fullName>CustodySubCategory__c</fullName>
    <label>Custody Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Africa Region query</fullName>
                <default>true</default>
                <label>Africa Region query</label>
            </value>
            <value>
                <fullName>ARM Codes</fullName>
            </value>
            <value>
                <fullName>Authorised Signatory Lists</fullName>
            </value>
            <value>
                <fullName>Billing Invoice Payment Method</fullName>
            </value>
            <value>
                <fullName>CA Calculations</fullName>
            </value>
            <value>
                <fullName>CA Claims</fullName>
            </value>
            <value>
                <fullName>CA Diary</fullName>
            </value>
            <value>
                <fullName>CA Election Instruction</fullName>
            </value>
            <value>
                <fullName>CA Entitlement Confirmations</fullName>
            </value>
            <value>
                <fullName>CA Event Details</fullName>
            </value>
            <value>
                <fullName>CA Income and Dividend</fullName>
            </value>
            <value>
                <fullName>CA Meeting Details</fullName>
            </value>
            <value>
                <fullName>CA Proxy</fullName>
            </value>
            <value>
                <fullName>Cash Accounts Not Loaded on Cashman</fullName>
            </value>
            <value>
                <fullName>Cash Accrued Interest</fullName>
            </value>
            <value>
                <fullName>Cash Add Account to BOL</fullName>
            </value>
            <value>
                <fullName>Cash Amend Cash Account</fullName>
            </value>
            <value>
                <fullName>Cash Audit Req Balance Certificate</fullName>
            </value>
            <value>
                <fullName>Cash Bank Statement Request</fullName>
            </value>
            <value>
                <fullName>Cash - CATS Entries</fullName>
            </value>
            <value>
                <fullName>Cash Forecast</fullName>
            </value>
            <value>
                <fullName>Cash Interest Rate Request</fullName>
            </value>
            <value>
                <fullName>Cashman Account Process</fullName>
            </value>
            <value>
                <fullName>Cash Market Information</fullName>
            </value>
            <value>
                <fullName>Cash Missing Mt950</fullName>
            </value>
            <value>
                <fullName>Cash Panel Verification</fullName>
            </value>
            <value>
                <fullName>Cash Req Current Balance</fullName>
            </value>
            <value>
                <fullName>Cash Request for OVD Breakdown</fullName>
            </value>
            <value>
                <fullName>Cash Unknown Credits and Debits</fullName>
            </value>
            <value>
                <fullName>Cash - ZAPS Entries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>