force-app/main/default/objects/IS_Case_Process_Setting__mdt/fields/EntitlementName__c.field-meta.xml
<CustomField>
    <fullName>EntitlementName__c</fullName>
    <description>RN - CloudSmiths - The name of the entitlement to be used for this service type and process</description>
    <inlineHelpText>The name of the entitlement to be used for this service type and process</inlineHelpText>
    <label>Entitlement Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>